<resources>
    <string name="app_name">Költség Kezelő</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Beállítások</string>
    <string name="title_activity_new_activity">new_activity</string>
    <string name="title_activity_list">list</string>
    <string name="title_activity_expense_details">expense_details</string>
    <string name="title_activity_all_income">AllIncomeActivity</string>
    <string name="title_activity_all_income_chart">AllIncomeChartActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_no_filled">Nincs kitölteve.</string>
    <string name="is_not_add">Nem sikerült hozzáadni!</string>
    <string name="succes_save">Sikeres mentés</string>
    <string name="cancel">Mégse</string>
    <string name="new_expense">Új kiadás</string>
    <string name="new_income">Új bevétel</string>
    <string name="view">Megtekintés</string>
    <string name="stat">Statisztika</string>
    <string name="order_by">Rendezés</string>
    <string name="amount">Összeg</string>
    <string name="date">Dátum</string>
    <string name="name">Név</string>
    <string name="ok">OK</string>
    <string name="faliled_save">Nem sikerült lementeni</string>
    <string name="no_date">Nincs dátum!</string>
    <string name="choose_date">Dátum</string>
    <string name="no_name">Nincs név!</string>
    <string name="descreption">Leírás</string>
    <string name="sum">Összeg</string>
    <string name="expenses">Kiadások</string>
    <string name="incomes">Bevételek</string>
    <string name="all_expenses">Összes kiadás:</string>
    <string name="all_incomes">Összes bevétel:</string>
    <string name="last_30_days">Elmúlt 30 nap</string>
    <string name="expense">Kiadás:</string>
    <string name="income">Bevétel:</string>
    <string name="add_new">Mentés</string>
    <string name="price">Ár</string>
    <string name="save">Mentés</string>
    <string name="new_item">Új termék</string>
    <string name="search">Keresés</string>
    <string name="no_select_ralation_or_amount">Nincs kiválasztva reálció vagy az összeg!</string>
    <string name="income_search_from_sum">Bevétel keresése összeg szerint</string>
    <string name="gt">Nagyobb</string>
    <string name="lt">Kisebb</string>
    <string name="eq">Egyernlő</string>
    <string name="older">Régebbi</string>
    <string name="newer">Újabb</string>
    <string name="on_time">Pontosan ekkor</string>
    <string name="included">Tartlmazza</string>
    <string name="balance">Egyenleg:</string>
    <string name="chart">Diagram</string>
</resources>
