<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">


    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etInComeName"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button android:id="@+id/myDatePickerButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:layout_below="@+id/etInComePrice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/buttonshape"/>

    <Button
        android:id="@+id/btnAddNewInCome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new"
        android:layout_below="@+id/myDatePickerButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/buttonshape"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/etInComePrice"
        android:hint="@string/price"
        android:layout_below="@+id/etInComeName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>
